# modbus-cpp

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
documentation/: modbus-cpp.asta  protocol.md
documentation/graphics/originals/: .~lock.modbus_drawings.odg#  modbus_drawings.odg
include/: connectionconfig.h  imodbus.h  modbus.h  request.h
scripts/: setup_submodules  submodules.list
src/: CMakeLists.txt  connectionconfig.cpp  connectionconfig.h  imodbusport.h  modbus.cpp  modbus.h  modbusbase.cpp  modbusbase.h  modbusrtu.cpp  modbusrtu.h  modbustcp.cpp  modbustcp.h
tests/: CMakeLists.txt  connectionconfigtest.cpp  modbusstacktest.cpp  requesttest.cpp
tools/: CMakeLists.txt
tools/modbus-master/: CMakeLists.txt
tools/modbus-slave/: CMakeLists.txt
